--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "babel src -d dist",
-    "test": "mocha --recursive --compilers js:babel-register",
+    "test": "mocha --recursive --require babel-core/register",
     "lint": "standard",
     "dev": "nodemon --exec npm run lint",
     "prepublish": "npm run lint && npm run test && npm run build"
@@ -15,20 +15,20 @@
   },
   "license": "MIT",
   "dependencies": {
-    "babel-polyfill": "^6.8.0",
-    "cheerio": "^0.22.0",
-    "htmlparser2": "^3.9.1"
+    "babel-polyfill": "^6.26.0",
+    "cheerio": "^1.0.0-rc.10",
+    "htmlparser2": "^6.1.0"
   },
   "devDependencies": {
-    "babel-cli": "^6.8.0",
-    "babel-eslint": "^6.0.4",
+    "babel-cli": "^6.26.0",
+    "babel-eslint": "^10.1.0",
     "babel-preset-es2015": "^6.6.0",
-    "babel-preset-stage-0": "^6.5.0",
-    "chai": "^3.5.0",
-    "mocha": "^2.4.5",
-    "nodemon": "^1.9.2",
-    "sinon": "^1.17.4",
-    "standard": "^7.0.1"
+    "babel-preset-stage-0": "^6.24.1",
+    "chai": "^4.3.4",
+    "mocha": "^9.0.0",
+    "nodemon": "^2.0.7",
+    "sinon": "^11.1.1",
+    "standard": "^16.0.3"
   },
   "standard": {
     "parser": "babel-eslint",
