--- a/package.json
+++ b/package.json
@@ -1,17 +1,15 @@
 {
-  "name": "web-auto-extractor",
-  "version": "1.0.1",
+  "name": "@deepcrawl/web-auto-extractor",
+  "version": "1.0.2",
   "description": "Automatically extracts structured information from webpages",
   "main": "dist/index.js",
   "scripts": {
     "build": "babel src -d dist",
     "test": "mocha --recursive --require babel-core/register",
-    "lint": "standard",
-    "dev": "nodemon --exec npm run lint",
-    "prepublish": "npm run lint && npm run test && npm run build"
+    "prepublish": "npm run test && npm run build"
   },
   "engines": {
-    "node": ">=4.4"
+    "node": ">=14.16.0"
   },
   "license": "MIT",
   "dependencies": {
@@ -21,7 +19,6 @@
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
-    "babel-eslint": "^10.1.0",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-stage-0": "^6.24.1",
     "chai": "^4.3.4",
@@ -29,12 +26,6 @@
     "nodemon": "^2.0.7",
     "sinon": "^11.1.1",
     "standard": "^16.0.3"
-  },
-  "standard": {
-    "parser": "babel-eslint",
-    "ignore": [
-      "tonicExample.js"
-    ]
   },
   "keywords": [
     "crawler",
@@ -48,10 +39,10 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/indix/web-auto-extractor.git"
+    "url": "https://github.com/deepcrawl/web-auto-extractor.git"
   },
-  "bugs": {
-    "url": "https://github.com/indix/web-auto-extractor/issues"
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com"
   },
   "tonicExampleFilename": "tonicExample.js"
 }
